--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v3
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme pydata-sphinx-theme sphinx-design
+          pip install sphinx sphinx_rtd_theme pydata-sphinx-theme sphinx-design sphinx-copybutton
       - name: Sphinx build
         run: |
           sphinx-build docs _build
