Update installation method

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ dependencies = [
     "Sphinx==7.2.6",
     "sphinx-autobuild==2024.2.4",
     "sphinx_copybutton",
+    "sphinx-autoapi",
     "sphinx_design==0.5.0"
 ]
